# vulkan-rust-setup

./: Cargo.toml
shader/: triangle.vert  vert.spv
src/: example_model.rs  helper.rs  main.rs  win.rs
